--- a/secret.yaml
+++ b/secret.yaml
@@ -1,11 +1,8 @@
 apiVersion: v1
-kind: Service
+kind: Secret
 metadata:
-  name: mongo
-spec:
-  selector:
-    app: mongo
-  ports:
-    - protocol: TCP
-      port: 27017
-      targetPort: 27017
+  name: mongo-secret
+type: Opaque
+data:
+  username: dXNlcm5hbWU=  
+  password: cGFzc3dvcmQ=
