--- a/vi cronjob.yaml
+++ b/vi cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: mongo-backup
 spec:
-  schedule: "0 15 * * *"  # Schedule the backup daily at 1:00 AM UTC. Adjust as needed.
+  schedule: "2 * * * *"  # Schedule the backup daily at 1:00 AM UTC. Adjust as needed.
   jobTemplate:
     spec:
       template:
